@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: August 14, 2010</p>
+      <p>Last Updated: August 18, 2010</p>
     </td>
   </tr>
 </table>
@@ -1890,6 +1890,8 @@ nuttx-5.9 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* sched/pg_*.c and *.c and include/nuttx/page.h - Implemented the
 	  common, core logic for on-demand paging. See
 	  http://www.nuttx.org/NuttXDemandPaging.html for details.
+	* drivers/usbdev/usbdev_serial.c - Correct compilation errors that
+	  occur if CONFIG_USBDEV_DUALSPEED is selected.
 
 pascal-2.1 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
